<resources>
    <string name="app_name">Parking</string>

    <!--    Generics-->
    <string name="generic_email_hint">eg. example@email.com</string>
    <string name="generic_email_label">Email</string>
    <string name="generic_password_label">Password</string>
    <string name="generic_password_hint">Password</string>
    <string name="generic_confirm_action">Confirm</string>
    <string name="generic_terms_conditions">By proceeding you agree\nto our Terms and Conditions</string>
    <string name="generic_terms_conditions_phrase">Terms and Conditions</string>
    <string name="generic_email_error_message">Should contain username, @ and domain name</string>
    <string name="generic_pass_error_message">Password must be between 5 and 10 characters</string>
    <string name="generic_pass_content_error_message">Password should contain at least one digit, one upper case, one symbol</string>

    <!--    WelcomeFragment screen-->
    <string name="welcome_create_account_action">Create Account</string>
    <string name="welcome_sing_in_action">Sign In</string>

    <!--    Sign Up screen-->
    <string name="signup_title">Create An Account</string>
    <string name="signup_name_label">Name</string>
    <string name="signup_name_hint">eg.John</string>
    <string name="signup_phone_label">Phone</string>
    <string name="signup_phone_hint">79123123</string>
    <string name="signup_phone_prefix">+373</string>
    <string name="signup_user_was_submit">User is valid and was submit to the server !</string>

    <!--    SignInScreen-->
    <string name="sign_in_forgot_pass_action">Forgot password</string>
    <string name="sign_in_user_not_found">Email address not found</string>
    <string name="sign_in_wrong_pass">Enter the correct password</string>
    <string name="sign_in_pass_error_message">Should contain upper–case letter, number and a symbol, 5\u201510 characters</string>
    <string name="sign_in_confirm">The user has been successfully authenticated</string>
    <string name="decoding_error">Token decoding error</string>

    <!--    Forgot Password Screen-->
    <string name="restore_title">Restore Password</string>
    <string name="restore_action">Submit</string>
    <string name="restore_success_notification">A new password has been sent to your email</string>
    <string name="restore_instruction">Please enter the email that you originally registered your  account with. You will receive an email with instructions on how you can change your password.</string>

    <!--    Validation, error messages-->
    <string name="error_message_name_length_higher">Name must be between 1 and 30 characters</string>
    <string name="error_message_name_non_alpha">Name should accept only alpha characters</string>
    <string name="error_message_email">Email doesn`t match the conditions</string>
    <string name="error_message_phone_8_digits">Phone must have 8 digits</string>
    <string name="error_message_phone_only_digits">Phone should accept only digits </string>
    <string name="restore_send_password">A new password has been sent to your email</string>

    <!--    Parking Lots-->
    <string name="parking_lots_title">Parking Lots</string>
    <string name="parking_lot_hint_name">Parking Lot Name</string>
    <string name="parking_lot_start_hour">06:00</string>
    <string name="parking_lot_end_hour">24:00</string>
    <string name="parking_lot_hint_open_hours">18:00 – 23:00</string>
    <string name="parking_lot_working_days">S/M/T/W/T/F/S</string>
    <string name="parking_lot_24_7">24/7</string>
    <string name="parking_lot_not_available">Temporary not available</string>
    <string name="parking_lot_search">Search Parking</string>
    <string name="parking_lot_qr_prompt">Please focus on the Parking QR Code</string>
    <string name="parking_lot_vacate">Vacate</string>
    <string name="parking_lot_wrong_qr_error_message">Wrong QR code !</string>
    <string name="parking_lot_currently_parked">You are currently parked on spot</string>
    <string name="parking_lots_search_empty">Sorry we were not able to find any parking lots based on your query</string>

    <!--    Server's Error messages-->
    <string name="something_wrong_happened">Something wrong happened</string>

    <!--    ParkingLot Tabs-->
    <string name="tabs_name">Mock Details</string>
    <string name="tab_details">Details</string>
    <string name="tab_parking_spots">Parking Spots</string>

    <!--    ParkingLot User Details-->
    <string name="details_user_address">Address</string>
    <string name="details_user_address_hint">str. Arborilor 21, or. Chisinau</string>
    <string name="details_user_working_days">Working Days</string>
    <string name="details_user_working_hours">Working Hours</string>
    <string name="details_user_levels">Levels</string>
    <string name="details_user_levels_hint">2</string>
    <string name="details_user_levels_spots_number_hint">23</string>
    <string name="details_user_working_hours_hint">18:00 /- 08:00</string>
    <string name="details_user_days_schedule">S/M/T/W/T/F/S</string>
    <string name="details_user_accessible_parking_spots">Number of Accessible Parking Spots</string>
    <string name="details_user_accessible_family_spots">Number of Family Friendly Spots</string>
    <string name="label_working_hours_24_7">Operates 24/7</string>

    <!--    Days Names-->
    <string name="lot_admin_sunday">Sunday</string>
    <string name="lot_admin_monday">Monday</string>
    <string name="lot_admin_tuesday">Tuesday</string>
    <string name="lot_admin_wednesday">Wednesday</string>
    <string name="lot_admin_thursday">Thursday</string>
    <string name="lot_admin_friday">Friday</string>
    <string name="lot_admin_saturday">Saturday</string>

    <!--    Bottom sheet-->
    <string name="sheet_park_spot_type">Parking spot type</string>
    <string name="sheet_park_visitors_name">Visitor`s name</string>
    <string name="sheet_park_visitors_name_hint">John Doe</string>
    <string name="sheet_park_spot_regular">Regular</string>
    <string name="sheet_park_spot_family">Family Friendly</string>
    <string name="sheet_park_spot_disable">Disabled</string>
    <string name="sheet_park_spot_type_regular">Regular</string>
    <string name="sheet_park_spot_type_family">Family Friendly</string>
    <string name="sheet_park_spot_type_handicap">Handicap</string>
    <string name="sheet_park_spot_type_closed">Temporary closed</string>
    <string name="sheet_park_btn_park">Park here</string>
    <string name="sheet_park_btn_call">Call</string>
    <string name="sheet_park_btn_update">Update</string>


    <!--    Create Parking Lot Fragment-->
    <string name="lot_admin_address">Address</string>
    <string name="lot_admin_level_a">Level A</string>
    <string name="lot_admin_level_b">Level B</string>
    <string name="lot_admin_level_c">Level C</string>
    <string name="lot_admin_level_d">Level D</string>
    <string name="lot_admin_level_e">Level E</string>
    <string name="lot_admin_hint">MallDova Parking Lot</string>
    <string name="lot_admin_address_hint">str. Arborilor 21, or. Chisinau</string>
    <string name="lot_admin_operating_hours_up_hint">Operating Hours</string>
    <string name="lot_admin_is_operates_24">Parking lot operates 24/7</string>
    <string name="lot_admin_temp_closed">Temporary Closed</string>
    <string name="lot_admin_sun">S</string>
    <string name="lot_admin_mon">M</string>
    <string name="lot_admin_tues">T</string>
    <string name="lot_admin_wednes">W</string>
    <string name="lot_admin_thurs">T</string>
    <string name="lot_admin_fri">F</string>
    <string name="lot_admin_satur">S</string>
    <string name="lot_admin_number_spots">Number of parking spots</string>
    <string name="lot_admin_add_level">+ Add Level</string>
    <string name="lot_admin_number_spots_hint">eg. 54</string>
    <string name="lot_admin_create_lot_toolbar">Create Parking Lot</string>
    <string name="lot_admin_operating_hours_hint">10:00 \- 23:00</string>
    <string name="lot_admin_operating_hours">%1s\ - %2s</string>
    <string name="lot_admin_error">Should contain 2\-70 characters</string>
    <string name="lot_admin_error_levels">Should contain 1\-3 digits, first digit can\'t be 0, max 150</string>
    <string name="lot_admin_time_delimitation">The start time must not be greater than the end time</string>
    <string name="lot_admin_parking_positive_message">Parking lot was successfully created!</string>
    <string name="lot_admin_pop_up_confirmation">OK</string>
</resources>
