<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_medium">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sheet_spot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextMediumBlack"
        android:layout_marginVertical="@dimen/margin_medium_extra"
        app:layout_constraintBottom_toTopOf="@id/tv_parking_spot_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="A-003" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_parking_spot_type"
        style="@style/TextMediumHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheet_park_spot_type"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rg_spot_type"/>

    <RadioGroup
        android:id="@+id/rg_spot_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/margin_sheet_radio_group"
        android:divider="@color/black"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@id/btn_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:checked="true"
            android:textColor="@color/gray"
            android:text="@string/sheet_park_spot_type_regular"
            app:buttonTint="@color/radio_button_checked_selector"/>

        <RadioButton
            android:id="@+id/rb_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:checked="false"
            android:textColor="@color/gray"
            android:text="@string/sheet_park_spot_type_family"
            app:buttonTint="@color/radio_button_checked_selector"/>

        <RadioButton
            android:id="@+id/rb_handicap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:checked="false"
            android:textColor="@color/gray"
            android:text="@string/sheet_park_spot_type_handicap"
            app:buttonTint="@color/radio_button_checked_selector"/>

        <RadioButton
            android:id="@+id/rb_temporary_closed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:checked="false"
            android:textColor="@color/gray"
            android:text="@string/sheet_park_spot_type_closed"
            app:buttonTint="@color/radio_button_checked_selector"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_call"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/sheet_park_btn_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
